deploy: f5d9aed3d3b6be565af5ab6c7981b3a260c3d013

--- a/users/user_fahad_aka_epic.html
+++ b/users/user_fahad_aka_epic.html
@@ -6,7 +6,7 @@
     <title>7-Day Leaderboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <div class="background-blobs">
@@ -336,9 +336,9 @@
 
 
         <footer>
-            <p>Last updated: 2025-09-14 08:42:15</p>
+            <p>Last updated: 2025-09-14 09:18:55</p>
         </footer>
     </div>
-    <script src="/static/js/script.js"></script>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
