deploy: bcb182aab7ab429d4499e579c3cbcac26f9766f8

--- a/users/user_fahad_aka_epic.html
+++ b/users/user_fahad_aka_epic.html
@@ -110,7 +110,7 @@
                         <i class="fa-solid fa-rocket"></i>
                     </div>
                     <div class="battle-score">9.3</div>
-                    <p>Tomorrow's goal</p>
+                    <p>Today's goal</p>
                 </div>
             </div>
         </div>
@@ -336,7 +336,7 @@
 
 
         <footer>
-            <p>Last updated: 2025-09-14 09:38:30</p>
+            <p>Last updated: 2025-09-14 10:18:46</p>
         </footer>
     </div>
     <script src="static/js/script.js"></script>
