--- a/users/user_kuro.html
+++ b/users/user_kuro.html
@@ -7,6 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="static/css/style.css">
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-4NJMY5MRXY');
+    </script>
 </head>
 <body>
     <div class="background-blobs">
@@ -336,7 +342,7 @@
 
 
         <footer>
-            <p>Last updated: 2025-09-15 05:41:40</p>
+            <p>Last updated: 2025-09-15 06:28:19</p>
         </footer>
     </div>
     <script src="static/js/script.js"></script>
