--- a/users/user_fahad_aka_epic.html
+++ b/users/user_fahad_aka_epic.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="static/css/style.css">
+   <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NJMY5MRXY"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -342,7 +344,7 @@
 
 
         <footer>
-            <p>Last updated: 2025-09-15 06:28:19</p>
+            <p>Last updated: 2025-09-15 06:33:55</p>
         </footer>
     </div>
     <script src="static/js/script.js"></script>
