--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
             
             <div class="action-card-modern"
-                 data-summary="Session 1 - You Scored 19 (Phone number change bypass)  Session 2 - You Scored 21 (Developer API key â Org takeover)  Session 3 - You Scored 19 (Chat IDOR via app-chat-id)  Session 4 - You Scored 28 (Disabled form via URL params + Email validation bypass â leaked activation links)  Session Total = 87"
+                 data-summary="Session 1 - You Scored 19 (Phone number change bypass)  Session 2 - You Scored 21 (Developer API key → Org takeover)  Session 3 - You Scored 19 (Chat IDOR via app-chat-id)  Session 4 - You Scored 28 (Disabled form via URL params + Email validation bypass → leaked activation links)  Session Total = 87"
                  data-user="Fahad aka Epic"
                  data-score="87.0"
                  data-time="2025-09-21 11:06">
@@ -415,7 +415,7 @@
 
 
         <footer>
-            <p>Last updated: 2025-09-23 17:39:18</p>
+            <p>Last updated: 2025-09-23 18:32:03</p>
         </footer>
     </div>
     <script src="static/js/script.js"></script>
