--- a/users/user_fahad_aka_epic.html
+++ b/users/user_fahad_aka_epic.html
@@ -152,7 +152,7 @@
                             <span class="action-score">+87.0 pts</span>
                         </div>
                         <div class="action-summary-modern">
-                            Session 1 - You Scored 19 (Phone number change bypass)  Session 2 - You Scored 21 (Developer API key â Org takeover)  Session 3 - You Scored 19 (Chat IDOR via app-chat-id)  Session 4 - You Scored 28 (Disabled form via URL params + Email validation bypass â leaked activation links)  Session Total = 87
+                            Session 1 - You Scored 19 (Phone number change bypass)  Session 2 - You Scored 21 (Developer API key → Org takeover)  Session 3 - You Scored 19 (Chat IDOR via app-chat-id)  Session 4 - You Scored 28 (Disabled form via URL params + Email validation bypass → leaked activation links)  Session Total = 87
                         </div>
                     </div>
                     
@@ -344,7 +344,7 @@
 
 
         <footer>
-            <p>Last updated: 2025-09-23 17:39:18</p>
+            <p>Last updated: 2025-09-23 18:32:03</p>
         </footer>
     </div>
     <script src="static/js/script.js"></script>
