deploy: 9aab1b45a2f1a9cf801a16061a4249108c8b40dc

--- a/users/user_shubham_khanna.html
+++ b/users/user_shubham_khanna.html
@@ -27,7 +27,7 @@
         <header class="arena-header">
             <div class="header-content">
                 <h1><i class="fa-solid fa-trophy"></i> 7-Day Rolling Leaderboard</h1>
-                <p>Tracking contributions from 2025-09-27 to 2025-10-04</p>
+                <p>Tracking contributions from 2025-09-29 to 2025-10-06</p>
             </div>
             <div class="header-actions">
                 <button class="btn-icon" id="themeToggle">
@@ -45,7 +45,7 @@
             </div>
             <div class="user-info">
                 <h2>Shubham Khanna</h2>
-                <p>Member since September 2025</p>
+                <p>Member since October 2025</p>
             </div>
         </div>
         <div class="user-stats">
@@ -63,7 +63,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <div class="stat-details">
-                    <span class="stat-value">16.0</span>
+                    <span class="stat-value">9.5</span>
                     <span class="stat-label">Total Score</span>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                         <h4>Past Self</h4>
                         <i class="fa-solid fa-clock-rotate-left"></i>
                     </div>
-                    <div class="battle-score">2.3</div>
+                    <div class="battle-score">1.4</div>
                     <p>7-day average</p>
                 </div>
                 
@@ -117,7 +117,7 @@
                         <h4>Future Self</h4>
                         <i class="fa-solid fa-rocket"></i>
                     </div>
-                    <div class="battle-score">2.5</div>
+                    <div class="battle-score">1.5</div>
                     <p>Today's goal</p>
                 </div>
             </div>
@@ -147,12 +147,12 @@
                         <div class="action-header-modern">
                             <div class="action-date">
                                 <i class="fa-regular fa-calendar"></i>
-                                2025-09-27 06:47
+                                2025-10-07 00:30
                             </div>
-                            <span class="action-score">+16.0 pts</span>
+                            <span class="action-score">+9.5 pts</span>
                         </div>
                         <div class="action-summary-modern">
-                            Deep manual testing on Target&#39;s chat with us Ai Chatbot section for injections.Executed ~200 custom-built more payloads targeting prompt injection, also checked for XSS. While no XSS or prompt injection discovered but HTML injection was confirmed &amp; reported.
+                            Tested uat target of private bbp. performed recon and checked for BAC. then tested for HTTP request smuggling to perform web cache poisoning and  found vulnerable. submitted bug report.
                         </div>
                     </div>
                     
@@ -168,7 +168,7 @@
     const chart = new Chart(ctx, {
         type: 'line',
         data: {
-            labels: ['2025-09-28', '2025-09-29', '2025-09-30', '2025-10-01', '2025-10-02', '2025-10-03', '2025-10-04'],
+            labels: ['2025-09-30', '2025-10-01', '2025-10-02', '2025-10-03', '2025-10-04', '2025-10-05', '2025-10-06'],
             datasets: [{
                 label: 'Current Week',
                 data: [0, 0, 0, 0, 0, 0, 0],
@@ -344,7 +344,7 @@
 
 
         <footer>
-            <p>Last updated: 2025-10-04 06:46:37</p>
+            <p>Last updated: 2025-10-06 19:17:20</p>
         </footer>
     </div>
     <script src="static/js/script.js"></script>
